codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__unified_exec_wait_before_streamed_agent_message.snap
---
source: tui/src/chatwidget/tests/exec_flow.rs
expression: combined
---
• Waited for background terminal · cargo test -p codex-core

• Streaming response.

─ 2026-04-08 03:04:05 +08:00 ───────────────────────────────────────────────────
